--- a/package.json
+++ b/package.json
@@ -7,10 +7,17 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.24.0",
+    "immutability-helper": "^3.1.1",
     "react": "^17.0.2",
+    "react-dnd": "^14.0.4",
+    "react-dnd-html5-backend": "^14.0.2",
     "react-dom": "^17.0.2",
+    "react-indexed-db": "^1.0.12",
     "react-redux": "^7.2.6",
     "react-scripts": "4.0.3",
+    "react-select": "^5.2.1",
+    "react-table": "^7.7.0",
+    "react-toastify": "^8.1.0",
     "redux-actions": "^2.6.5",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
